# Kestrel

./: CMakeLists.txt  Main.qml  README.md  main.cpp  main.h
Notes/: Features.md
QML/: Main.qml
QML/month/: Month.qml
QML/title/: Settings.qml  Title.qml
QML/util/: HSpacer.qml  VSpacer.qml
